test/tasty/neg/src-2/TestTargetNameAnnot_fail.scala
package tastytest

object TestTargetNameAnnot {
  def test1 = TargetNameAnnot.++  // error
  def test2 = TargetNameAnnot.foo // ok
}
